apps/kv-group/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kv-group
  labels:
    app.kubernetes.io/name: kv-group
    app.kubernetes.io/part-of: kv-group
